--- a/src/main/resources/public/src/scss/theme/default/itsm.scss
+++ b/src/main/resources/public/src/scss/theme/default/itsm.scss
@@ -14,6 +14,7 @@
 @import '../../template/_file-uploader.scss';
 @import '../../template/_avatar.scss';
 @import "../../template/_date-picker.scss";
+@import "../../template/_text-editor.scss";
 @import '_variables.scss';
 @import '_fonts.scss';
 @import '_mixin.scss';
@@ -26,7 +27,6 @@
 @import '_gnb.scss';
 @import '_notification.scss';
 @import '_colorpicker.scss';
-@import '_quill.scss';
 @import '_tooltip.scss';
 @import '_thumbnail.scss';
 @import '_reply.scss';
