--- a/src/main/resources/public/template/form/formDesignerEdit.html
+++ b/src/main/resources/public/template/form/formDesignerEdit.html
@@ -197,8 +197,8 @@
                 <h3>
                     <label class="point" th:text="#{form.properties.option}"></label>
                     <div class="property-group-option">
-                        <button type="button" class="btn default-point-line option-minus"><span class="icon"></span></button>
-                        <button type="button" class="btn default-point-line option-plus"><span class="icon"></span></button>
+                        <button type="button" class="btn ghost-line option-minus"><span class="icon"></span></button>
+                        <button type="button" class="btn ghost-line option-plus"><span class="icon"></span></button>
                     </div>
                 </h3>
                 <table class="property-field-table"></table>
