--- a/src/main/resources/public/src/scss/template/_text-editor.scss
+++ b/src/main/resources/public/src/scss/template/_text-editor.scss
@@ -5,217 +5,213 @@
  * @author wdj
  * @version 1.0
  */
-
- $quill-font-family:              "Noto Sans KR";
- $quill-font-size:                16px;
- $quill-font-weight:              400; // regular
- $quill-line-height:              24px;
- $quill-font-color:               $dark-gray;
- $quill-border:                   0.0625rem solid $line-gray;
- $quill-bg-color:                 $white;
- $quill-toolbar-font-size:        16px;
- $quill-toolbar-font-weight:      500; // medium
- $quill-toolbar-font-color:       $light-black;
- $quill-toolbar-pressed-color:    $point-blue;
- $quill-toolbar-pressed-bg-color: $line-gray;
- $quill-toolbar-hover-color:      $light-black;
- $quill-toolbar-hover-bg-color:   rgba(135, 206, 255, 0.1);
-
 .ql-toolbar {
-    & *:focus {
-        outline: none !important;
-    }
-    &.ql-snow {
-        font-family: $quill-font-family;
-        font-size: $quill-toolbar-font-size;
-        padding: 0;
-        border: $quill-border;
-        background-color: $quill-bg-color;
-        .ql-formats {
-            margin: 0;
-            padding: 0;
-            .ql-picker-label,
-            .ql-picker-item {
-                color: $quill-toolbar-font-color;
-                font-size: $quill-toolbar-font-size;
-                font-weight: $quill-toolbar-font-weight;
-                &.ql-active {
-                    color: $quill-toolbar-hover-color;
-                }
-            }
-            .ql-header { // h1 ~ normal
-                width: 7.5rem; // 120px
-                height: 2.5rem; // 40px
-                .ql-picker-label,
-                .ql-picker-item {
-                    padding: 0.4375rem 0.625rem; // 7px 10px
-                    &:not(.ql-color-picker):not(.ql-icon-picker) svg { // 화살표 아이콘
-                        margin: auto;
-                    }
-                    &:hover,
-                    &:focus{
-                        color: $quill-toolbar-hover-color;
-                        background-color: $quill-toolbar-pressed-bg-color;
-                    }
-                }
-                .ql-picker-options {
-                    padding: 0;
-                    box-shadow: 0 0 0.3125rem 0 $line-gray;
-                    .ql-picker-item[data-value="1"]::before { font-size: 2em; }
-                    .ql-picker-item[data-value="2"]::before { font-size: 1.5em; }
-                    .ql-picker-item[data-value="3"]::before { font-size: 1.17em; }
-                    .ql-picker-item[data-value="4"]::before { font-size: 0.83em; }
-                }
-                &.ql-expanded {
-                    .ql-picker-label {
-                        border-color: transparent;
-                        color: $quill-toolbar-font-color;
-                        background-color: $quill-toolbar-pressed-bg-color;
-                    }
-                    .ql-picker-options {
-                        margin-left: -0.0625rem; // -1px
-                        border-color: $line-gray;
-                        .ql-picker-item {
-                            &.ql-selected {
-                                color: $quill-toolbar-pressed-color;
-                            }
-                        }
-                    }
-                }
-            }
-            .ql-color-picker { // color picker
-                width: 2.813rem; // 45px
-                height: 2.5rem; // 40px
-                .ql-picker-label {
-                    padding: 0.5625rem 0.6875rem; // 9px 11px
-                    svg {
-                        .ql-transparent {
-                            opacity: 1;
-                        }
-                        .ql-label,
-                        .bg-line {
-                            fill: $quill-toolbar-font-color;
-                        }
-                        .bg {
-                            fill: $quill-bg-color;
-                        }
-                    }
-                    &.ql-active[data-value]:not([data-value='']) {
-                      svg .ql-label {
-                        fill: $white;
-                      }
-                    }
-                }
-                .ql-picker-item {
-                    &:hover,
-                    &:focus{
-                        color: $quill-toolbar-hover-color;
-                        border-color: $quill-toolbar-pressed-color;
-                    }
-                }
-                .ql-picker-options {
-                    box-shadow: 0 0 0.3125rem 0 $line-gray;
-                }
-                &.ql-expanded {
-                    .ql-picker-label {
-                        border-color: transparent;
-                        color: $quill-toolbar-font-color;
-                        background-color: $quill-toolbar-pressed-bg-color;
-                    }
-                    .ql-picker-options {
-                        border-color: $line-gray;
-                        .ql-picker-item {
-                            &.ql-selected {
-                                border-color: $quill-toolbar-pressed-color;
-                            }
-                        }
-                    }
-                }
-            }
-            .ql-icon-picker { // align
-                width: 2.813rem; // 45px
-                height: 2.5rem; // 40px
-                .ql-picker-label,
-                .ql-picker-item {
-                    padding: 0.5625rem 0.6875rem; // 9px 11px
-                    width: 2.813rem; // 45px
-                    height: 2.5rem; // 40px
-                    &:hover,
-                    &:focus{
-                        color: $quill-toolbar-hover-color;
-                        background-color: $quill-toolbar-pressed-bg-color;
-                    }
-                }
-                .ql-picker-options {
-                    box-shadow: 0 0 0.3125rem 0 $line-gray;
-                    padding: 0;
-                }
-                &.ql-expanded {
-                    .ql-picker-label {
-                        border-color: transparent;
-                        color: $quill-toolbar-font-color;
-                        background-color: $quill-toolbar-pressed-bg-color;
-                    }
-                    .ql-picker-options {
-                        margin-left: -0.0625rem; // -1px
-                        border-color: $line-gray;
-                        .ql-picker-item {
-                            &.ql-selected svg {
-                                fill: $quill-toolbar-pressed-color;
-                            }
-                        }
-                    }
-                }
-            }
-            button { // bold, underline, italic
-                padding: 0;
-                margin: 0;
-                width: 2.813rem; // 45px
-                height: 2.5rem; // 40px
-                border-radius: 0;
-                svg {
-                  float: initial;
-                }
-                &:hover,
-                &:focus,
-                &.ql-active {
-                    color: $quill-toolbar-hover-color;
-                    background-color: $quill-toolbar-pressed-bg-color;
-                }
-            }
+  & *:focus {
+    outline: none !important;
+  }
+  &.ql-snow {
+    font-family: $font-family;
+    border: $text-editor-border;
+    background-color: $text-editor-bg-color;
+    padding: 0;
+
+    .ql-formats {
+      margin: 0;
+      padding: 0;
+      // picker inside item common
+      .ql-picker-label,
+      .ql-picker-item {
+        font-size:  $text-editor-toolbar-font-size;
+        font-weight:  $text-editor-toolbar-font-weight;
+        color: $text-editor-toolbar-font-color;
+
+        &.ql-active {
+          color: $text-editor-toolbar-hover-font-color;
         }
+      }
+      // headings
+      .ql-header {
+        width: 7.5rem; // 120px
+        height: 2.5rem; // 40px
+
+        .ql-picker-label,
+        .ql-picker-item {
+          padding: 0.4375rem 0.625rem; // 7px 10px
+          // 화살표 아이콘
+          &:not(.ql-color-picker):not(.ql-icon-picker) svg {
+            margin: auto;
+          }
+
+          &:hover,
+          &:focus {
+            color:  $text-editor-toolbar-hover-font-color;
+            background-color: $text-editor-toolbar-hover-bg-color;
+          }
+        }
+
+        .ql-picker-options {
+          padding: 0;
+          box-shadow:  $text-editor-toolbar-box-shadow;
+          // 상대 크기
+          .ql-picker-item[data-value="1"]::before { font-size: 2em; }
+          .ql-picker-item[data-value="2"]::before { font-size: 1.5em; }
+          .ql-picker-item[data-value="3"]::before { font-size: 1.17em; }
+          .ql-picker-item[data-value="4"]::before { font-size: 0.83em; }
+        }
+
+        &.ql-expanded {
+          .ql-picker-label {
+            border-color: transparent;
+            color: $text-editor-toolbar-hover-font-color;
+            background-color:  $text-editor-toolbar-hover-bg-color;
+          }
+
+          .ql-picker-options {
+            margin-left: -0.0625rem; // -1px
+            border-color:  $text-editor-border-color;
+            // 선택된 item
+            .ql-picker-item {
+              &.ql-selected {
+                color:  $text-editor-toolbar-selected-font-color;
+              }
+            }
+          }
+        }
+      }
+      // color picker
+      .ql-color-picker { 
+        width: 2.813rem; // 45px
+        height: 2.5rem; // 40px
+
+        .ql-picker-label {
+          padding: 0.5625rem 0.6875rem; // 9px 11px
+          svg {
+            .ql-transparent { opacity: 1; }
+            .ql-label,
+            .bg-line { fill: $text-editor-toolbar-font-color; }
+            .bg { fill: $text-editor-bg-color; }
+          }
+
+          &.ql-active[data-value]:not([data-value='']) svg .ql-label {
+            fill: $white;
+          }
+          &:hover,
+          &:focus {
+            color:  $text-editor-toolbar-hover-font-color;
+            background-color: $text-editor-toolbar-hover-bg-color;
+          }
+        }
+
+        .ql-picker-item {
+          &:hover,
+          &:focus {
+            color:  $text-editor-toolbar-hover-font-color;
+            border-color: $text-editor-toolbar-selected-font-color;
+          }
+        }
+
+        .ql-picker-options {
+          box-shadow: $text-editor-toolbar-box-shadow;
+        }
+
+        &.ql-expanded {
+          .ql-picker-label {
+            border-color: transparent;
+            color: $text-editor-toolbar-hover-font-color;
+            background-color: $text-editor-toolbar-hover-bg-color;
+          }
+          .ql-picker-options {
+            border-color: $text-editor-bg-color;
+
+            .ql-picker-item {
+                &.ql-selected {
+                    border-color: $text-editor-toolbar-selected-font-color;
+                }
+            }
+          }
+        }
+      }
+      // align
+      .ql-icon-picker {
+        width: 2.813rem; // 45px
+        height: 2.5rem; // 40px
+
+        .ql-picker-label,
+        .ql-picker-item {
+          width: 2.813rem; // 45px
+          height: 2.5rem; // 40px
+          padding: 0.5625rem 0.6875rem; // 9px 11px
+
+          &:hover,
+          &:focus {
+            color: $text-editor-toolbar-hover-font-color;
+            background-color: $text-editor-toolbar-hover-bg-color;
+          }
+        }
+
+        .ql-picker-options {
+          box-shadow: $text-editor-toolbar-box-shadow;
+          padding: 0;
+        }
+
+        &.ql-expanded {
+          .ql-picker-label {
+            border-color: transparent;
+            color: $text-editor-toolbar-hover-font-color;
+            background-color: $text-editor-toolbar-hover-bg-color;
+          }
+          .ql-picker-options {
+            margin-left: -0.0625rem; // -1px
+            border-color: $text-editor-border-color;
+            .ql-picker-item {
+              &.ql-selected svg {
+                fill: $text-editor-toolbar-selected-font-color;
+              }
+            }
+          }
+        }
+      }
+      // bold, underline, italic
+      button {
+        width: 2.813rem; // 45px
+        height: 2.5rem; // 40px
+        padding: 0;
+        margin: 0;
+        border-radius: 0;
+
+        svg { float: initial; }
+
+        &:hover,
+        &:focus,
+        &.ql-active {
+            color: $text-editor-toolbar-hover-font-color;
+            background-color: $text-editor-toolbar-hover-bg-color;
+        }
+      }
     }
+  }
 }
 .ql-container {
-    &.ql-snow {
-      font-family: $quill-font-family;
-      font-size: $quill-font-size;
-      border: $quill-border;
-      background-color: $quill-bg-color;
-      .ql-editor {
-            color: $quill-font-color;
-            line-height: $quill-line-height;
-            padding: 0.625rem; //10px
-            .ql-blank::before {
-                content: attr(data-placeholder);
-            }
-            h1, h2, h3, h4, h5, h6 {
-                line-height: 1.2;
-            }
-            span {
-                font-size: inherit;
-                font-weight: inherit;
-                line-height: inherit;
-            }
-            em {
-                font-style: italic;
-            }
-            strong {
-                font-weight: bold;
-            }
-        }
+  &.ql-snow {
+    font-family: $font-family;
+    font-size:  $text-editor-font-size;
+    font-weight:  $text-editor-font-weight;
+    line-height: $text-editor-line-height;
+    color: $text-editor-font-color;
+    border: $text-editor-border;
+    background-color: $text-editor-bg-color;
+
+    .ql-editor {
+      padding: 0.625rem; // 10px
+      // 내부 태그 재정의
+      .ql-blank::before { content: attr(data-placeholder); }
+      h1, h2, h3, h4, h5, h6 { line-height: 1.2; }
+      em { font-style: italic; }
+      strong { font-weight: bold; }
     }
-    &.ql-border-disabled {
-        border-color: transparent;
-    }
+  }
+
+  &.ql-border-disabled {
+    border-color: transparent;
+  }
 }
