--- a/src/main/resources/public/src/scss/template/_thumbnail.scss
+++ b/src/main/resources/public/src/scss/template/_thumbnail.scss
@@ -30,6 +30,7 @@ body.thumbnail-modal-active {
     right: 0;
     bottom: 0;
     left: 0;
+    z-index: 1;
 
     &.thumbnail-modal-active {
         display:block;
