--- a/src/main/resources/public/src/scss/form/_colorpicker.scss
+++ b/src/main/resources/public/src/scss/form/_colorpicker.scss
@@ -57,7 +57,7 @@
                     height: 0.625rem; // 10px
                     border: 0.0625rem solid #c8ced8;
                     border-radius: 50%;
-                    background: #fff;
+                    background: #ffffff;
                     cursor: pointer;
                 }
 
@@ -69,7 +69,7 @@
                     height: 0.625rem;
                     border: 0.0625rem solid #c8ced8;
                     border-radius: 50%;
-                    background: #fff;
+                    background: #ffffff;
                     cursor: pointer;
                 }
 
