--- a/src/main/resources/public/src/scss/form/_tooltip.scss
+++ b/src/main/resources/public/src/scss/form/_tooltip.scss
@@ -13,7 +13,7 @@
 
     .tooltip-contents {
         visibility: hidden;
-        background-color: white;
+        background-color: $white;
         width: 18.625rem; // 298px
         font-size: 1rem; // 16x;
         color: $point-blue;
