--- a/src/main/resources/public/src/scss/portal/_search.scss
+++ b/src/main/resources/public/src/scss/portal/_search.scss
@@ -255,7 +255,7 @@
         &-view {
             .view {
                 padding: 3.125rem 12.75rem 3.125rem 12.75rem; // 50px 204px 50px 204px
-                background-color: white;
+                background-color: $white;
                 display: flex;
                 flex-direction: column;
                 flex-grow: 1;
