--- a/src/main/resources/public/src/scss/process/_variables.scss
+++ b/src/main/resources/public/src/scss/process/_variables.scss
@@ -6,7 +6,7 @@ $element-readonly-border-color:               $line-gray;
 $element-readonly-border-width:               0.0625rem; // 1px
 
 
-$white: #fff;
+$white: #ffffff;
 $process-header-height: 3.125rem; // 50px
 $process-header-top-bottom-padding: 0.563rem; // 9px
 $process-header-real-height: $process-header-height - ($process-header-top-bottom-padding * 2);
