--- a/src/main/resources/public/src/scss/template/_color-picker.scss
+++ b/src/main/resources/public/src/scss/template/_color-picker.scss
@@ -30,7 +30,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: flex-start;
-        background-color: white;
+        background-color: $white;
         width: 30rem; // 482px
         margin-top: 0.3125rem; // 5px
         padding: 1.25rem 0 0.625rem 1.25rem; // 20px 10px 20px;
