--- a/src/main/resources/public/src/scss/theme/default/contents/_contents-list-edit.scss
+++ b/src/main/resources/public/src/scss/theme/default/contents/_contents-list-edit.scss
@@ -18,7 +18,7 @@
     & > .edit-area {
         padding: 9.625rem 2.1875rem 3.125rem 0; // 154px 35px 50px 0
         width: 38.125rem; // 610px
-        background: white;
+        background: $white;
         font-weight: 500;
         & .scroll-wrap {
             height: 43.125rem; // 690px
