--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -582,7 +582,7 @@ input, button, select, optgroup, textarea {
 
 .file-uploader-edit .dropzone .dz-preview.dz-file-preview .dz-image {
   border-radius: 1.25rem;
-  background: #999;
+  background: #999999;
   background: linear-gradient(to bottom, #eee, #ddd);
 }
 
@@ -4216,7 +4216,7 @@ body.thumbnail-modal-active {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  background-color: white;
+  background-color: #ffffff;
   width: 30rem;
   margin-top: 0.3125rem;
   padding: 1.25rem 0 0.625rem 1.25rem;
@@ -4300,7 +4300,7 @@ body.thumbnail-modal-active {
   height: 0.625rem;
   border: 0.0625rem solid #c8ced8;
   border-radius: 50%;
-  background: #fff;
+  background: #ffffff;
   cursor: pointer;
 }
 
@@ -4309,7 +4309,7 @@ body.thumbnail-modal-active {
   height: 0.625rem;
   border: 0.0625rem solid #c8ced8;
   border-radius: 50%;
-  background: #fff;
+  background: #ffffff;
   cursor: pointer;
 }
 
@@ -4359,7 +4359,7 @@ body.thumbnail-modal-active {
 
 .help-tooltip .tooltip-contents {
   visibility: hidden;
-  background-color: white;
+  background-color: #ffffff;
   width: 18.625rem;
   font-size: 1rem;
   color: #0098FF;
