--- a/src/main/resources/public/src/scss/form/_properties.scss
+++ b/src/main/resources/public/src/scss/form/_properties.scss
@@ -164,7 +164,7 @@
             //        top: 1.125rem; // 18px
             //        right: -0.6875rem;
             //        //-11px
-            //        color: #FFF;
+            //        color: #ffffff;
             //        font-size: 0.6875rem;
             //        //11px
             //        line-height: 1.3;
