--- a/src/main/resources/public/src/scss/portal/_sessionInvalid.scss
+++ b/src/main/resources/public/src/scss/portal/_sessionInvalid.scss
@@ -13,7 +13,7 @@
 
 .session-div-right {
     float: right;
-    background-color: white;
+    background-color: $white;
     padding: 21.5625rem 6.25rem; // 345px 100px
     border-left: 0.0625rem solid $line-gray;
 
