--- a/src/main/resources/public/src/scss/portal/_tooltip.scss
+++ b/src/main/resources/public/src/scss/portal/_tooltip.scss
@@ -15,7 +15,7 @@
 
     .tooltip-contents {
         visibility: hidden;
-        background-color: white;
+        background-color: $white;
         width: 22.5rem; // 60px
         font-size: 0.8125rem; // 13x;
         color: $point-blue;
