--- a/src/main/resources/public/src/scss/theme/default/_mixin.scss
+++ b/src/main/resources/public/src/scss/theme/default/_mixin.scss
@@ -116,7 +116,7 @@
     @include content-header();
     .view {
         padding: 3.125rem 19.375rem 3.125rem 19.375rem; // 50px 310px 50px 310px
-        background-color: white;
+        background-color: $white;
         display: flex;
         flex-direction: column;
         flex-grow: 1;
@@ -141,7 +141,7 @@
     @include content-header();
     .flex {
         padding: 3.125rem 19.375rem 9.315rem 19.375rem; // 50px 310px 150px 310px
-        background-color: white;
+        background-color: $white;
         display: flex;
         flex-grow: 1;
         &.flex-column {
@@ -163,7 +163,7 @@
 }
 
 @mixin edit-template() {
-    background-color: white;
+    background-color: $white;
     @include content-header();
     .edit {
         padding-top: 3.125rem; // 50px
