--- a/src/main/resources/public/src/scss/theme/default/contents/_contents-document.scss
+++ b/src/main/resources/public/src/scss/theme/default/contents/_contents-document.scss
@@ -3,7 +3,7 @@
     @include contents-template();
     .header { padding: 2.875rem 3.75rem 0.625rem 3.75rem; } // 46px 60px 10px 60px
     .service-request {
-        background-color: white;
+        background-color: $white;
         overflow-y: auto;
         display: flex;
         flex-direction: column;
