--- a/src/main/resources/public/src/scss/theme/default/contents/_contents-token.scss
+++ b/src/main/resources/public/src/scss/theme/default/contents/_contents-token.scss
@@ -6,14 +6,14 @@
         height: 6.25rem; // 100px
     }
     .list {
-        background-color: white;
+        background-color: $white;
         overflow-y: auto;
         display: flex;
         flex-direction: column;
         flex: auto;
         &-item {
             margin: 0.625rem 3.75rem; // 10px 60px
-            background-color: white;
+            background-color: $white;
             display: flex;
             &:first-child {
                 margin-top:  3.125rem; // 50px
