--- a/src/main/resources/public/src/scss/theme/default/contents/_contents-tree-edit.scss
+++ b/src/main/resources/public/src/scss/theme/default/contents/_contents-tree-edit.scss
@@ -16,7 +16,7 @@
         padding: 9.625rem 2.1875rem 3.125rem 0; // 154px 35px 50px 0
         //width: 38.125rem; // 610px
         width: 1050px;
-        background: white;
+        background: $white;
         font-weight: 500;
         & .scroll-wrap {
             height: 43.125rem; // 690px
