#9263 검색 결과에 포인트 컬러 넣기. 1. 검색키워드에 스타일 적용

--- a/src/main/resources/public/template/portal/portalMain.html
+++ b/src/main/resources/public/template/portal/portalMain.html
@@ -199,6 +199,13 @@
                             }
                         }
                     });
+
+                    if (document.getElementById('searchValue').value !== '') {
+                        document.querySelectorAll('.row > .content-box > .content > .content').forEach(function(data) {
+                            let regex = new RegExp(document.getElementById('searchValue').value, 'gi');
+                            data.innerHTML = data.textContent.replace(regex, "<span class='keyword'>" + document.getElementById('searchValue').value + "</span>");
+                        });
+                    }
                 }
             };
             aliceJs.sendXhr(opt);
