--- a/src/main/resources/public/src/scss/portal/_search.scss
+++ b/src/main/resources/public/src/scss/portal/_search.scss
@@ -238,6 +238,9 @@
                             font-weight: 400;
                             font-size: 1rem; // 16px
                         }
+                        .keyword {
+                            color: $point-blue;
+                        }
                     }
 
                     .no-data {
