--- a/src/main/resources/public/template/form/formDesignerEdit.html
+++ b/src/main/resources/public/template/form/formDesignerEdit.html
@@ -56,7 +56,7 @@
                         <!--<label th:text="#{form.label.saveExit}"></label>-->
                     </button>
                 </th:block>
-                <span class="form-name"></span>
+                <span class="form-name ml-auto"></span>
             </div>
             <div class="contents">
                 <div class="drawing-board" id="form-panel"></div>
