--- a/src/main/resources/public/template/process/processDesignerEdit.html
+++ b/src/main/resources/public/template/process/processDesignerEdit.html
@@ -55,7 +55,7 @@
             <button type="button" id="btnDownload">
                 <span class="icon-image-download"></span>
             </button>
-            <span class="process-name"></span>
+            <span class="process-name ml-auto"></span>
         </div>
         <div class="process-element-palette">
             <span class="rectangle-menu shape event">
