--- a/src/main/resources/public/src/scss/form/form.scss
+++ b/src/main/resources/public/src/scss/form/form.scss
@@ -11,6 +11,7 @@
 @import '../template/_functions.scss'; // 상속 불가
 @import '../template/_mixins.scss'; // 상속 불가
 @import '../template/_alignments.scss'; // 상속 불가
+@import '../template/_flex.scss';
 @import '../template/_common.scss'; // 상속 불가
 @import '../template/_scrollbars.scss';
 @import '../template/_file-uploader.scss';
