--- a/src/main/resources/public/src/scss/portal/_flex.scss
+++ b/src/main/resources/public/src/scss/portal/_flex.scss
@@ -1,9 +1,9 @@
-@import "../template/_alignments.scss";
+@import "../template/_flex.scss";
 
 // div 내부에 여러개의 span을 우측으로 붙이는 클래스
 // ex) 공지사항, 게시판 상세조회에서 작성자와 작성일은 오른쪽에 정렬되어 출력
 .row-right {
-    display: flex;
+    display: inherit;
     justify-content: flex-end;
     span {
         &:last-child {
