--- a/src/main/resources/public/src/scss/portal/_layout.scss
+++ b/src/main/resources/public/src/scss/portal/_layout.scss
@@ -13,6 +13,10 @@
     font-weight: $font-weight-medium;
     @include header;
 
+    .logo {
+      margin-left: 1.25rem; // 20px
+    }
+
     .title {
       font-size: 1.125rem; // 18px
       font-weight: $font-weight-medium;
@@ -22,11 +26,6 @@
     .left {
       flex: none;
       margin-left: 1.25rem; // 20px
-    }
-
-    .right {
-      margin-left: auto;
-      margin-right: 1.25rem; // 20px
     }
 
     .login {
