--- a/src/main/resources/public/src/scss/portal/_signup.scss
+++ b/src/main/resources/public/src/scss/portal/_signup.scss
@@ -22,7 +22,7 @@
         position: inherit;
         top: 5rem; // 80px
         float: right;
-        margin-right: 5rem; // 80px
+        margin: 5rem 5rem 0 0; // 80px 80px 0 0
     }
 
     &-login-note {
