--- a/src/main/resources/public/src/scss/template/_flex.scss
+++ b/src/main/resources/public/src/scss/template/_flex.scss
@@ -1,30 +1,195 @@
-.flex {
-  // flex-direction 정렬 기준(방향)관련 클래스
-  .flex-row               : { flex-direction: row; }
-  .flex-column            : { flex-direction: column; }
+/* _flex.scss
+ *
+ * 파일 경로 : template/_flex.scss
+ * @description flex display 관련 디자인
+ * @author jy.lim
+ * @version 1.0
+ */
 
-  // justify-content 기본 축 아이템 정렬(좌우 정렬) 관련 클래스
-  .justify-content-start  : { justify-content: flex-start; }
-  .justify-content-end    : { justify-content: flex-end; }
-  .justify-content-center : { justify-content: center; }
+$flex-align-type: (row, column);
+@each $direction in $flex-align-type {
+  .flex-#{$direction} {
+  display: flex;
+  flex-direction: #{$direction};
+  }
+}
 
-  // align 내부 아이템 수직 정렬 관련 클래스
-  .align-items-start      : { align-items: flex-start; }
-  .align-items-end        : { align-items: flex-end; }
-  .align-items-center     : { align-items: center; }
-  .align-items-baseline   : { align-items: baseline; }
+.justify-content-start {
+  justify-content: flex-start;
+}
+.justify-content-end {
+  justify-content: flex-end;
+}
+.justify-content-center {
+  justify-content: center;
+}
 
-  // align-self flex 내부에서 단일 item만 수직 정렬(align-self) 클래스 (보류)
-  .align-self-start       : { align-self: flex-start; }
-  .align-self-end         : { align-self: flex-end; }
-  .align-self-center      : { align-self: center; }
-  .align-self-baseline    : { align-self: baseline; }
+.align-items-start {
+  align-items: flex-start;
+}
+.align-items-end {
+  align-items: flex-end;
+}
+.align-items-center {
+  align-items: center;
+}
+.align-items-baseline {
+  align-items: baseline;
+}
 
-    // fill 이 클래스가 붙은 아이템은 좌, 우측 여백을 자신의 영역으로 차지합니다.
-    만약 flex 내부에 이 클래스가 붙은 아이템이 n개라면 1개 아이템 당 n등분 된 여백을 자신의 영역으로 차지하게 됩니다.
-    .flex-fill              : { flex: 1 1 auto; )
+.align-self-start {
+  align-self: flex-start;
+}
+.align-self-end {
+  align-self: flex-end;
+}
+.align-self-center {
+  align-self: center;
+}
+.align-self-baseline {
+  align-self: baseline;
+}
 
-    // auto margins flex내부에서는 float 정렬이 적용되지 않습니다. margin-(left or right): auto로 정렬합니다.
-    .mr-auto                : {margin-right: auto}    // 왼쪽 정렬 + 오른쪽에 공백 채우기
-    .ml-auto                : {margin-right: auto}    // 오른쪽 정렬 + 왼쪽에 공백 채우기
+.flex-fill {
+  flex: 1 1 auto;
+}
+.mr-auto {
+  margin-right: auto;
+}
+.ml-auto {
+  margin-left: auto;
+}
+
+// TODO #9089 view-template 믹스인 수정 필요
+@mixin view-template() {
+  @include content-header();
+  .view {
+    padding: 3.125rem 19.375rem 3.125rem 19.375rem; // 50px 310px 50px 310px
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    .view-column {
+      display: flex;
+      &.view-text {
+        min-height: 13.4375rem; // 215px
+        padding: 0.3125rem 1.25rem; // 5px 20px
+        margin-bottom: 0.75rem; // 12px
+        span {margin: 0;}
+      }
+
+      &.view-attach-file {
+        min-height: 3.125rem; // 50px
+        padding: 0.125rem 1.25rem; // 2px 20px
+      }
+    }
+  }
+}
+
+@mixin flex-template() {
+  @include content-header();
+  .flex {
+    padding: 3.125rem 19.375rem 9.315rem 19.375rem; // 50px 310px 150px 310px
+    background-color: white;
+    display: flex;
+    flex-grow: 1;
+    &.flex-column {
+      flex-direction: column;
+    }
+    &.flex-row {
+      flex-direction: row;
+    }
+    .flex-item {
+      display: flex;
+      &.item-text {
+        min-height: 13.4375rem; // 215px
+        padding: 0.3125rem 1.25rem; // 5px 20px
+        margin-bottom: 0.75rem; // 12px
+        span {margin: 0;}
+      }
+    }
+  }
+}
+
+@mixin edit-template() {
+  background-color: white;
+  @include content-header();
+  .edit {
+    padding-top: 3.125rem; // 50px
+    width: 61.25rem; // 980px
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    & .scroll-wrap {
+      height: 43.125rem; // 690px
+      display: flex;
+      flex-direction: column;
+      .form-wrap {
+        flex: 1;
+        overflow: auto;
+        padding: 0 1.875rem 0 4.0625rem; // 0 30px 0 65px
+      }
+    }
+    .table-set {
+      margin-top: 0.6875rem;
+      height: 28.125rem; // 450px
+      overflow: auto;
+      thead tr {
+        border-bottom: 0.125rem solid #E1E3E6;
+      }
+      tr {
+        height: 2.5rem; // 40px
+      }
+      th {
+        font-weight: 500;
+        padding: 1rem; // 16px
+        vertical-align: middle;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+      td {
+        padding: 0.75rem 0.75rem 0 0; // 6px 6px 0 0
+      }
+    }
+    .form-set {
+      display: flex;
+      flex-direction: column;
+      margin-top: 0.6875rem; // 11px
+      li {
+        color: $dark-gray;
+        font-weight: 400;
+        height: 1.5rem; // 24px
+      }
+      label {
+        font-weight: 500;
+        margin-left: 1.25rem; // 20px
+        &:first-child {
+          margin-left: 0;
+        }
+      }
+      .checkbox-list {
+        height: 13.5rem; // 216px
+        border: 0.0625rem solid $element-border-color; // 1px
+        border-radius: $element-border-radius;
+        overflow-y: auto;
+        padding: 0.5rem 0.625rem; // 8px 10px
+      }
+      .radio-list {
+        height: 27rem;
+        border: 0.0625rem solid $element-border-color; // 1px
+        border-radius: $element-border-radius;
+        overflow-y: auto;
+        padding: 0.5rem 0.625rem; // 8px 10px
+      }
+      .text-editor {
+        height: 12.5rem; // 200px
+      }
+      .label-row {
+        display: flex;
+        align-items: center;
+      }
+    }
+  }
 }
