--- a/src/main/resources/public/template/process/processAdminList.html
+++ b/src/main/resources/public/template/process/processAdminList.html
@@ -40,10 +40,15 @@
                     </button>
                 </td>
                 <td width="10%">
-                    <button type="button" th:if="${process.enabled == true}" sec:authorize="hasAuthority('process.update')"
-                            th:disabled="${!process.enabled}" th:onclick="openProcessDesignerEdit([[${process.id}]])">
-                        <span class="icon-edit"></span>
-                    </button>
+                    <th:block th:switch="${#authorization.expression('hasAuthority(''process.update'')')}">
+                        <button th:case="true" type="button" th:if="${process.enabled == true}" th:disabled="${!process.enabled}"
+                                th:onclick="openProcessDesignerEdit([[${process.id}]])">
+                            <span class="icon-edit"></span>
+                        </button>
+                        <button th:case="*" type="button" th:onclick="|aliceJs.alertWarning(i18n.msg('auth.msg.accessDenied'))|">
+                            <span class="icon-edit"></span>
+                        </button>
+                    </th:block>
                 </td>
                 <td width="10%" th:text="#{${process.status}}"></td>
                 <td width="28%" class="align-left" th:text="${process.description}"></td>
